--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-/* Tulis kode HTML kalian di bawah ini */
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <title>Roja</title>
+    <!-- Ganti "Budi" dengan nama kamu -->
+    <link rel="stylesheet" href="./style.css" />
+</head>
+
+<body>
+    <main>
+        <img src="./assets/boy-avatar-3.webp" alt="avatar image" class="avatar" />
+        <h1>Muhammad Gustiar Aroja Puta</h1>
+        <p>Hai! Hobi saya bersantai.<br />Jangan lupa follow ya!</p>
+        <div class="sosmed-links">
+            <!-- Masukan Tombol Link Sosmed Di sini -->
+
+            <!-- 1. Link Pertama -->
+            <a href="https://www.instagram.com/muhammadgustiararoja/" class="sosmed" target="_blank">
+                <img src="./assets/instagram.svg" alt="instagram icon" class="sosmed-icon" />
+                Instagram
+                <div class="arrow">
+                    <img src="./assets/arrow.svg" alt="arrow icon" />
+                </div>
+            </a>
+            <!-- 2. Link Kedua -->
+            <a href="https://wa.me/6281315302966" class="sosmed" target="_blank">
+                <img src="./assets/whatsapp.svg" alt="whatsapp icon" class="sosmed-icon" />
+                Whatsapp
+                <div class="arrow">
+                    <img src="./assets/arrow.svg" alt="arrow icon" />
+                </div>
+            </a>
+            <!-- 3. Link Ketiga -->
+            <a href="https://www.youtube.com/@Roja_x_Raka" class="sosmed" target="_blank">
+                <img src="./assets/youtube.svg" alt="youtube icon" class="sosmed-icon" />
+                Youtube
+                <div class="arrow">
+                    <img src="./assets/arrow.svg" alt="arrow icon" />
+                </div>
+            </a>
+            
+        </div>
+    </main>
+</body>
+
+</html>
